# super-mem

./: .gitignore  README.md  pyproject.toml  sitemap.xml  讲稿.MD
.github/workflows/: ci.yml
ccplugin/hooks/: common.ps1  common.sh  hooks.json  parse-transcript.ps1  parse-transcript.sh  session-end.ps1  session-end.sh  session-start.ps1  session-start.sh  stop.ps1  stop.sh  user-prompt-submit.ps1  user-prompt-submit.sh
claude-plugin/: index.html
cli/: index.html
docs/: cli.md  python-api.md  培训讲义.md  直接生成PPT.md
examples/: .env.example  full_feature_demo.py
getting-started/: index.html
memory/: memory.md
python-api/: index.html
scripts/: e2e_real_chain.py  verify_existing_functionality.py
search/: search_index.json
src/memsearch/: cli.py  compact.py  config.py  core.py  resilience.py  store.py  watcher.py
src/memsearch/memory/: __init__.py  long_memory.py  short_memory.py  triggers.py  user.py
src/memsearch/rerankers/: __init__.py  api.py  cross_encoder.py
tests/: conftest.py  test_cli_config.py  test_compact.py  test_config.py  test_long_memory.py  test_memory_type.py  test_rerankers.py  test_resilience.py  test_short_memory.py  test_store.py  test_triggers.py  test_watch.py
培训讲义/: index.html
直接生成PPT/: index.html
