[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memsearch"
version = "0.1.11"
description = "Semantic memory search for markdown knowledge bases"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pymilvus[milvus_lite]>=2.5.0",
    "click>=8.1",
    "watchdog>=4.0",
    "setuptools<75",
    "tomli_w>=1.0",
    "tomli>=2.0; python_version < '3.11'",
    "openai>=1.0",
]

[project.optional-dependencies]
google = ["google-genai>=1.0"]
voyage = ["voyageai>=0.3"]
ollama = ["ollama>=0.4"]
local = ["sentence-transformers>=3.0"]
anthropic = ["anthropic>=0.40"]
rerank = ["httpx>=0.27"]
rerank-local = ["sentence-transformers>=3.0"]
all = ["memsearch[google,voyage,ollama,local,anthropic,rerank,rerank-local]"]

[project.scripts]
memsearch = "memsearch.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/memsearch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/memsearch"]
branch = true

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".git", ".venv", ".pytest_cache", "__pycache__", "build", "dist", "memory", "articles"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
files = ["src/memsearch"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
check_untyped_defs = true
no_implicit_optional = true
exclude = "(^|/)__pycache__/"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pip-audit>=2.7",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocs-terminal>=4.8.0",
]
